# c_raspberry_pi_pendulum

./: CMakeLists.txt  README.md  input_output.c  input_string_test.c  servo_serial_communication.c
motor_drivers/: displacement_sensors.c  displacement_sensors.h  main.c  numerical_methods.c  numerical_methods.h
tableaux_exemple/: lists_methods.c  lists_methods.h  main.c
